# notifbot

./: .editorconfig  .gitignore  FAQ.md  LICENSE  Privacy.md  README.md  build.sbt
android/: .bazelrc  .gitignore  .scalafmt.conf  AndroidManifest.xml  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  build.sbt  maven_install.json
android/project/: android.sbt
android/res/layout/: about.xml  magic.xml  main.xml  pkg_item.xml  settings.xml
android/res/menu/: main.xml
android/res/mipmap-anydpi-v26/: icon.xml
android/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
android/res/xml/: pref_about.xml  pref_headers.xml
android/src/androidTest/java/com/yhsif/notifbot/: Junit3MainActivityTest.java  Junit4MainActivityTest.java
android/src/com/yhsif/notifbot/: HttpSender.kt  MainActivity.kt  NetworkMonitor.kt  NotificationListener.kt  PkgAdapter.kt  PkgData.kt  PkgViewHolder.kt  ShareReceiver.kt
android/src/com/yhsif/notifbot/settings/: AboutPreferenceFragment.kt  BasePreferenceFragment.kt  PrefsFragment.kt  SettingsActivity.kt
android/src/main/: AndroidManifest.xml
android/src/main/res/layout/: magic.xml
android/src/main/res/menu/: main.xml
android/src/main/res/values/: strings.xml
android/src/main/scala/com/yhsif/notifbot/: HttpSender.scala  MainActivity.scala  NetworkMonitor.scala  NotificationListener.scala  PkgAdapter.scala  PkgData.scala  ShareReceiver.scala
android/tools/: release.sh  repin_dependencies.sh
appengine/: .gitignore  Gopkg.toml  Makefile  app.yaml  chats.go  counter.go  go.mod  go.sum  log.go  main.go  metrics.go  redis.go  secrets.go  token.go  util.go
cloudrun/: .gitignore  Dockerfile  Makefile  chats.go  counter.go  go.mod  go.sum  log.go  main.go  metrics.go  token.go  util.go
docs/: FAQ.md
project/: android.sbt
src/androidTest/java/com/yhsif/autonatif/: Junit3MainActivityTest.java  Junit4MainActivityTest.java
src/androidTest/java/com/yhsif/autonotif/: Junit3MainActivityTest.java  Junit4MainActivityTest.java
src/main/: AndroidManifest.xml
src/main/res/layout/: about.xml  main.xml  pkg_item.xml
src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
src/main/res/xml/: automotive_app_desc.xml
src/main/scala/com/yhsif/autonatif/: MainActivity.scala  NotificationListener.scala  ShareReceiver.scala
src/main/scala/com/yhsif/autonotif/: MainActivity.scala  NotificationListener.scala  PkgAdapter.scala  PkgData.scala  PkgViewHolder.scala  ShareReceiver.scala
src/main/scala/com/yhsif/notifbot/: MainActivity.scala  PkgViewHolder.scala
