load(
    "@io_bazel_rules_kotlin//kotlin:kotlin.bzl",
    "define_kt_toolchain",
    "kt_android_library",
)
load("@rules_android//android:rules.bzl", "android_binary")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",  # "1.1", "1.2", "1.3", or "1.4"
    jvm_target = "11",  # "1.6", "1.8", "9", "10", "11", "12", or "13",
    language_version = "1.4",  # "1.1", "1.2", "1.3", or "1.4"
)

PACKAGE = "com.yhsif.notifbot"

MANIFEST = "AndroidManifest.xml"

MANIFEST_VALUES = {"PACKAGE": PACKAGE}

android_binary(
    name = "app",
    custom_package = PACKAGE,
    dexopts = ["--force-jumbo"],
    manifest = MANIFEST,
    manifest_values = MANIFEST_VALUES,
    deps = [
        ":notifbot",
    ],
)

kt_android_library(
    name = "notifbot",
    srcs = glob(["src/**/*.kt"]),
    custom_package = PACKAGE,
    manifest = MANIFEST,
    resource_files = glob(["res/**/*"]),
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_fragment_fragment_ktx",
        "@maven//:androidx_preference_preference",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:com_google_android_gms_play_services_cronet",
        "@maven//:com_google_android_material_material",
        "@maven//:org_chromium_net_cronet_fallback",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
    ],
)
