load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.5",  # "1.1", "1.2", "1.3", "1.4", "1.5", or "1.6"
    jvm_target = "11",  # "1.6", "1.8", "9", "10", "11", "12", or "13",
    language_version = "1.5",  # "1.1", "1.2", "1.3", "1.4", "1.5", or "1.6"
)

PACKAGE = "com.yhsif.notifbot"

MANIFEST = "AndroidManifest.xml"

MANIFEST_VALUES = {"PACKAGE": PACKAGE}

load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

load(
    "@rules_oppia_android//:oppia_android_application.bzl",
    "declare_deployable_application",
    "oppia_android_application",
)

declare_deployable_application(
    name = "install",
    aab_target = "//:debug",
)

[
    oppia_android_application(
        name = name,
        config_file = "//:bundle_config.pb.json",
        custom_package = PACKAGE,
        dexopts = ["--force-jumbo"],
        manifest = MANIFEST,
        manifest_values = MANIFEST_VALUES,
        proguard_generate_mapping = False,
        shrink_resources = release,
        deps = [
            ":notifbot",
        ],
    )
    for name, release in (("debug", False), ("release", True))
]

kt_android_library(
    name = "notifbot",
    srcs = glob(["src/**/*.kt"]),
    custom_package = PACKAGE,
    manifest = MANIFEST,
    resource_files = glob(["res/**/*"]),
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_fragment_fragment_ktx",
        "@maven//:androidx_preference_preference",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:com_google_android_gms_play_services_cronet",
        "@maven//:com_google_android_material_material",
        "@maven//:org_chromium_net_cronet_fallback",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
    ],
)
