###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_jvm_external", version = "6.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.activity:activity:1.4.0",  # 1.6.0
        "androidx.appcompat:appcompat:1.3.1",  # 1.5.1
        "androidx.cardview:cardview:1.0.0",
        "androidx.core:core-ktx:1.12.0",
        "androidx.fragment:fragment-ktx:1.4.1",  # 1.5.3
        "androidx.preference:preference:1.2.0",  # 1.1.1
        "androidx.recyclerview:recyclerview:1.2.1",
        "com.google.android.gms:play-services-cronet:18.1.0",
        "com.google.android.material:material:1.6.1",  # 1.8.0
        "org.chromium.net:cronet-fallback:119.6045.31",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3",
    ],
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(
    maven,
    "maven",
)
